# games_rule_chatbot

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: build-docker-image.yaml  build-wheel.yaml  deploy.yaml  renovate.yaml
.hooks/: validate_release_notes.sh
chart/: Chart.yaml
chart/templates/: postgresql-cluster.yaml  postgresql-schema-configmap.yaml
charts/app/: .helmignore  Chart.yaml  values.yaml
charts/app/api/templates/: NOTES.txt  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
charts/app/charts/api/: Chart.yaml  values.yaml
charts/app/charts/api/templates/: _helpers.tpl  deployment.yaml  service.yaml
charts/app/templates/: minio-secret.yaml  minio-service-lb.yaml  minio-tenant.yaml  postgresql-cluster.yaml  postgresql-schema-configmap.yaml
charts/cluster_infra/minio_infra/: Chart.yaml  values.yaml
charts/cluster_infra/postgresql_infra/: Chart.yaml
docker/api/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
docs/: db_query_ref.md
libs/api/: RELEASE.md  pyproject.toml
libs/api/src/games_rule_api/: main.py
libs/api/src/games_rule_api/api/: api.py
libs/api/src/games_rule_api/dependencies/: db.py
libs/api/src/games_rule_api/exceptions/: exceptions.py
libs/api/src/games_rule_api/models/: health.py
libs/api/src/games_rule_api/routers/: games.py  health.py  settings.py
libs/api/src/rules_api/: main.py
libs/api/src/rules_api/api/: api.py  config.py
libs/api/src/rules_api/models/: game.py
libs/api/src/rules_api/routers/: games.py  health.py  settings.py
libs/core/: RELEASE.md  pyproject.toml
libs/core/src/games_rule_core/postgres/: config.py  session.py
libs/core/src/postgres/: session.py
libs/core/src/postgres/models/: models.py
libs/readers_writers/: RELEASE.md  pyproject.toml
libs/readers_writers/src/postgres/reader/: reader.py
prompts/: main.md  project_structure.md
simple/games-rule-api/: games_rule_api-0.1.0-py3-none-any.whl  games_rule_api-0.2.0-py3-none-any.whl  games_rule_api-0.2.1-py3-none-any.whl  games_rule_api-0.2.2-py3-none-any.whl  games_rule_api-0.2.3-py3-none-any.whl  games_rule_api-0.2.4-py3-none-any.whl  games_rule_api-0.2.5-py3-none-any.whl  index.html
simple/games-rule-core/: games_rule_core-0.1.0-py3-none-any.whl  games_rule_core-0.1.1-py3-none-any.whl  games_rule_core-0.1.2-py3-none-any.whl  games_rule_core-0.1.3-py3-none-any.whl  games_rule_core-0.1.4-py3-none-any.whl  games_rule_core-0.1.5-py3-none-any.whl  games_rule_core-0.1.6-py3-none-any.whl  games_rule_core-0.1.7-py3-none-any.whl  games_rule_core-0.2.0-py3-none-any.whl  index.html
simple/games_rule_api/: games_rule_api-0.1.0-py3-none-any.whl
