[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "games_rule_chatbot"
version = "0.1.0"
description = "A chatbot that will be able to answer questions about games that it has the rules of"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
]

[tool.hatch.build.targets.wheel]
packages = ["lib/api/src/rules_api"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q --cov"

[dependency-groups]
dev = [
    "bandit[toml]>=1.8.6",
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
    "pre-commit",
]
