[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "games_rule_chatbot"
version = "0.1.0"
description = "A chatbot that will be able to answer questions about games that it has the rules of"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "games-rule-api>=0.2.2",
    "games-rule-core>=0.1.0",
    "polyfactory",
    "pydantic",
    "pydantic-settings",
    "sqlmodel>=0.0.27",
    "uvicorn",
]

[[tool.uv.index]]
name = "github-pypi"
url = "https://andrewknoesen.github.io/games_rule_chatbot/simple/"
default = false

[tool.hatch.build.targets.wheel]
packages = [
    "lib/api/src/rules_api",
    "lib/core/src/postgres",
    "docker/api",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.black]
line-length = 88
target-version = [
    "py311",
]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
]
addopts = "-ra -q --cov"

[dependency-groups]
dev = [
    "bandit[toml]>=1.8.6",
    "black",
    "mypy",
    "omymodels>=0.8.1",
    "polyfactory",
    "pre-commit",
    "pytest-cov",
    "pytest>=7.0",
    "ruff",
    "tomli-w>=1.2.0",
]
