[project]
name = "api_image"
version = "0.1.3"
description = "A package for running the games rule api"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "games_rule_api==0.2.3",
]

[[tool.uv.index]]
name = "github-pypi"
url = "https://andrewknoesen.github.io/games_rule_chatbot/simple/"
default = false
