[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "games_rule_api"
version = "0.2.4"
description = "FastAPI component for games_rule_chatbot."
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "polyfactory",
    "annotated-doc>=0.0.3",
    "games-rule-core==0.1.7",
]

[[tool.uv.index]]
name = "github-pypi"
url = "https://andrewknoesen.github.io/games_rule_chatbot/simple/"
default = false

[tool.hatch.build.targets.wheel]
packages = ["src/rules_api"]

[dependency-groups]
dev = []
