[project]
name = "games_rule_api"
version = "0.2.5"
description = "FastAPI component for games_rule_chatbot."
authors = [
    { name = "Andrew Knoesen", email = "andrewknoesen@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "polyfactory",
    "annotated-doc>=0.0.3",
    "games-rule-core==0.2.0",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "github-pypi"
url = "https://andrewknoesen.github.io/games_rule_chatbot/simple/"
default = false

[dependency-groups]
dev = []
