[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "games_rule_core"
version = "0.1.5"
description = "Storage controller component for games_rule_chatbot."
requires-python = ">=3.11"
dependencies = [
    "pydantic",
    "pydantic-settings",
    "polyfactory",
    "sqlmodel>=0.0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/postgres"]

[dependency-groups]
dev = []

[tool.mypy]
plugins = ["pydantic.mypy"]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
