[project]
name = "games_rule_core"
version = "0.2.0"
description = "Storage controller component for games_rule_chatbot."
authors = [
    { name = "Andrew Knoesen", email = "andrewknoesen@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pydantic",
    "pydantic-settings",
    "polyfactory",
    "sqlmodel>=0.0.27",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0, <2.1",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "github-pypi"
url = "https://andrewknoesen.github.io/games_rule_chatbot/simple/"
default = false

[dependency-groups]
dev = []

[tool.mypy]
plugins = ["pydantic.mypy"]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
